fix flickr for mobile menu & align buttons in listing on bottom for tpl_modified_nova

--- a/templates/tpl_modified_nova/css/jquery.mmenulight.css
+++ b/templates/tpl_modified_nova/css/jquery.mmenulight.css
@@ -9,6 +9,10 @@
  * http://creativecommons.org/licenses/by/4.0/
  */
 
+#mobile_menu {
+  display:block;
+} 
+ 
 #menu_closer {
   cursor:pointer;
   width:30px;
